--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -59,7 +59,7 @@ env:
   AREA_RESTRICTIONS_MONITOR_KEY: ""
   EVACUATION_MONITOR_KEY: ""
   LAMBDA_LAYER_KEY: ""
-  FUNCTION_BUCKET: ""
+  FUNCTION_BUCKET: "wfnews-lambdas"
 
 jobs:
   plan:
