--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -204,7 +204,7 @@ on:
       FUNCTION_BUCKET:
         required: false
         type: string
-        default: ""
+        default: "wfnews-lambdas"
 
     secrets:
       # AWS_ACCESS_KEY_ID:
