--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,6 +32,7 @@ jobs:
   build:
     env:
       ANGULAR_DIRECTORY: ./client/wfnews-war/src/main/angular
+      APP_CONFIG_FILE: ./client/wfnews-war/src/main/angular/src/assets/data/appConfig.mobile.json
     runs-on: ubuntu-latest
     environment:
       name: ${{ inputs.build_environment }}
@@ -50,21 +51,6 @@ jobs:
         env: 
           NPMRC: ${{ secrets.NPMRC }}
         run: echo -e "$NPMRC" > .npmrc
-          
-
-      - name: Replace tokens
-        uses: cschleiden/replace-tokens@v1.2
-        with:
-          files: ${{ env.ANGULAR_DIRECTORY }}/src/assets/data/appConfig.mobile.json
-        env:
-          APPLICATION_ACRONYM: ${{ vars.APPLICATION_ACRONYM }}
-          APPLICATION_ENVIRONMENT: ${{ vars.APPLICATION_ENVIRONMENT }}
-          BUILD_NUMBER: ${{ github.run_number }}
-          LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
-          PROJECT_VERSION: ${{ vars.PROJECT_VERSION }}
-
-      - name: Print appConfig
-        run: cat ${{ env.ANGULAR_DIRECTORY }}/src/assets/data/appConfig.mobile.json
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -76,6 +62,24 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+
+      - name: Extract Maven project version
+        run: echo ::set-output name=version::$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+        id: project
+      
+      - name: Show extracted Maven project version
+        run: echo ${{ steps.project.outputs.version }}
+
+      - name: Replace tokens
+        uses: cschleiden/replace-tokens@v1.2
+        with:
+          files: ${{ env.APP_CONFIG_FILE }}
+        env:
+          APPLICATION_ACRONYM: ${{ vars.APPLICATION_ACRONYM }}
+          APPLICATION_ENVIRONMENT: ${{ vars.APPLICATION_ENVIRONMENT }}
+          BUILD_NUMBER: ${{ github.run_number }}
+          LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
+          PROJECT_VERSION: ${{ steps.project.outputs.version }}
 
       - name: Install Ionic
         run: npm install -g @ionic/cli
