--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,24 +53,13 @@ jobs:
           NPMRC: ${{ secrets.NPMRC }}
         run: echo -e "$NPMRC" > .npmrc
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Get XML Info
+        id: version
+        uses: mavrosxristoforos/get-xml-info@1.1.1
         with:
-          node-version: 16
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Extract Maven project version
-        working-directory: ${{ env.POM_DIRECTORY }}
-        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-        id: project
-      
-      - name: Show extracted Maven project version
-        run: echo ${{ env.PROJECT_VERSION }}
+          xml-file: '${{ env.POM_DIRECTORY }}/pom.xml'
+          xpath: '//version'
+        
 
       - name: Replace tokens
         uses: cschleiden/replace-tokens@v1.2
@@ -81,7 +70,18 @@ jobs:
           APPLICATION_ENVIRONMENT: ${{ vars.APPLICATION_ENVIRONMENT }}
           BUILD_NUMBER: ${{ github.run_number }}
           LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
-          PROJECT_VERSION: ${{ steps.project.outputs.version }}
+          PROJECT_VERSION: ${{ steps.version.outputs.info }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
       - name: Install Ionic
         run: npm install -g @ionic/cli
