--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,7 +60,7 @@ jobs:
         uses: mavrosxristoforos/get-xml-info@1.1.1
         with:
           xml-file: 'client/pom.xml'
-          xpath: "/*[local-name()='project']/*[local-name()='version']/text()"
+          xpath: "/project/version/text()"
         
 
       - name: Replace tokens
