--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,29 +1,29 @@
 name: Build Android
 
 # Controls when the workflow will run
-on: 
+on:
   workflow_call:
     inputs:
       build_environment:
-        description: 'Build Environment'
+        description: "Build Environment"
         type: string
         required: true
       upload_to_play_store:
-        description: 'Upload to Play Store'
+        description: "Upload to Play Store"
         type: boolean
         required: true
   workflow_dispatch:
     inputs:
       build_environment:
-        description: 'Build Environment'
+        description: "Build Environment"
         type: choice
         options:
           - DEV
           - TEST
           - PROD
-        default: 'development'
+        default: "development"
       upload_to_play_store:
-        description: 'Upload to Play Store'
+        description: "Upload to Play Store"
         type: boolean
         default: false
 
@@ -33,22 +33,26 @@ jobs:
     env:
       ANGULAR_DIRECTORY: ./client/wfnews-war/src/main/angular
       APP_CONFIG_FILE: ./client/wfnews-war/src/main/angular/src/assets/data/appConfig.mobile.json
+      API_KEY: ${{ inputs.build_environment == 'PROD' && secrets.WFNEWS_API_KEY_PROD || inputs.build_environment == 'TEST' && secrets.WFNEWS_API_KEY_TEST || secrets.WFNEWS_API_KEY_DEV }}
+
     runs-on: ubuntu-latest
+
     environment:
       name: ${{ inputs.build_environment }}
+
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set short git commit SHA
         id: vars
         if: always()
         run: |
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
           echo "::set-output name=short_sha::$calculatedSha"
-      
+
       - name: Add .npmrc file
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        env: 
+        env:
           NPMRC: ${{ secrets.NPMRC }}
         run: echo -e "$NPMRC" > .npmrc
 
@@ -56,55 +60,57 @@ jobs:
         id: version
         uses: mavrosxristoforos/get-xml-info@1.1.1
         with:
-          xml-file: 'client/pom.xml'
+          xml-file: "client/pom.xml"
           xpath: "/*[local-name()='project']/*[local-name()='version']"
-        
 
       - name: Replace tokens
         uses: cschleiden/replace-tokens@v1.2
         with:
           files: ${{ env.APP_CONFIG_FILE }}
         env:
-          # AGOL_ACTIVE_FIRES: ${{ vars.AGOL_ACTIVE_FIRES }}
+          # From config.jsp
+          AGOL_ACTIVE_FIRES: ${{ vars.AGOL_ACTIVE_FIRES }}
           AGOL_AREA_RESTRICTIONS: ${{ vars.AGOL_AREA_RESTRICTIONS }}
           AGOL_BANS_AND_PROHIBITIONS: ${{ vars.AGOL_BANS_AND_PROHIBITIONS }}
-          # AGOL_EVAC_ORDERS: ${{ vars.AGOL_EVAC_ORDERS }}
-          # AGOL_FIRE_CENTRES: ${{ vars.AGOL_FIRE_CENTRES }}
-          # AGOL_PERIMETRES: ${{ vars.AGOL_PERIMETRES }}
-          # APP_STORE_URL: ${{ vars.APP_STORE_URL }}
-          # APPLICATION_ACRONYM: ${{ vars.APPLICATION_ACRONYM }}
+          AGOL_EVAC_ORDERS: ${{ vars.AGOL_EVAC_ORDERS }}
+          AGOL_FIRE_CENTRES: ${{ vars.AGOL_FIRE_CENTRES }}
+          AGOL_PERIMETRES: ${{ vars.AGOL_PERIMETRES }}
+          AGOL_URL: ${{ vars.AGOL_URL }}
+          APP_STORE_URL: ${{ vars.APP_STORE_URL }}
+          APPLICATION_ACRONYM: ${{ vars.APPLICATION_ACRONYM }}
           APPLICATION_ENVIRONMENT: ${{ vars.DEFAULT_APPLICATION_ENVIRONMENT }}
-          # BASE_URL: ${{ vars.BASE_URL }}
-          # BC_WILDFIRE_SUPPORT_PAGE: ${{ vars.BC_WILDFIRE_SUPPORT_PAGE }}
+          BASE_URL: ${{ vars.BASE_URL }}
+          BC_WILDFIRE_SUPPORT_PAGE: ${{ vars.BC_WILDFIRE_SUPPORT_PAGE }}
           BUILD_NUMBER: ${{ github.run_number }}
-          # BURN_REGISTRATION_LINE: ${{ vars.BURN_REGISTRATION_LINE }}
+          BURN_REGISTRATION_LINE: ${{ vars.BURN_REGISTRATION_LINE }}
           # CONFIG_IM_URL: ${{ vars.CONFIG_IM_URL }}
           DRIVEBC_BASE_URL: ${{ vars.DRIVEBC_BASE_URL }}
-          # FACEBOOK_URL: ${{ vars.FACEBOOK_URL }}
-          # GOOGLE_PLAY_URL: ${{ vars.GOOGLE_PLAY_URL }}
-          # LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
+          FACEBOOK_URL: ${{ vars.FACEBOOK_URL }}
+          GOOGLE_PLAY_URL: ${{ vars.GOOGLE_PLAY_URL }}
+          LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
           # MAP_ICONS_ICON_ANCHOR: ${{ vars.MAP_ICONS_ICON_ANCHOR }}
           # MAP_ICONS_ICON_SIZE: ${{ vars.MAP_ICONS_ICON_SIZE }}
           # MAP_ICONS_SHADOW_SIZE: ${{ vars.MAP_ICONS_SHADOW_SIZE }}
           # MAP_ICONS_TOOLTIP_OFFSET: ${{ vars.MAP_ICONS_TOOLTIP_OFFSET }}
-          # MORE_INFORMATION_LINK: ${{ vars.MORE_INFORMATION_LINK }}
+          MORE_INFORMATION_LINK: ${{ vars.MORE_INFORMATION_LINK }}
           OPENMAPS_BASE_URL: ${{ vars.OPENMAPS_BASE_URL }}
-          # POINT_ID_URL: ${{ vars.POINT_ID_URL }}
+          POINT_ID_URL: ${{ vars.POINT_ID_URL }}
           PROJECT_VERSION: ${{ steps.version.outputs.info }}
-          # REPORT_A_WILDFIRE_PHONE_LINE: ${{ vars.REPORT_A_WILDFIRE_PHONE_LINE }}
+          REPORT_A_WILDFIRE_PHONE_LINE: ${{ vars.REPORT_A_WILDFIRE_PHONE_LINE }}
           SITEMINDER_URL_PREFIX: ${{ vars.SITEMINDER_URL_PREFIX }}
-          # TWITTER_URL: ${{ vars.TWITTER_URL }}
-          # WEBADE_OAUTH2_AUTH_SCOPES: ${{ vars.WEBADE_OAUTH2_AUTH_SCOPES }}
+          TWITTER_URL: ${{ vars.TWITTER_URL }}
+          WEBADE_OAUTH2_AUTH_SCOPES: ${{ vars.WEBADE_OAUTH2_AUTH_SCOPES }}
           WEBADE_OAUTH2_AUTHORIZE_URL: ${{ vars.WEBADE_OAUTH2_AUTHORIZE_URL }}
-          # WEBADE_OAUTH2_CHECK_TOKEN_V2_URL: ${{ vars.WEBADE_OAUTH2_CHECK_TOKEN_V2_URL }}
-          # WEBADE_OAUTH2_CLIENT_ID: ${{ vars.WEBADE_OAUTH2_CLIENT_ID }}
-          # WEBADE_OAUTH2_ENABLE_CHECK_TOKEN: ${{ vars.WEBADE_OAUTH2_ENABLE_CHECK_TOKEN }}
+          WEBADE_OAUTH2_CHECK_TOKEN_V2_URL: ${{ vars.WEBADE_OAUTH2_CHECK_TOKEN_URL }}
+          WEBADE_OAUTH2_CLIENT_ID: ${{ vars.WEBADE_OAUTH2_UI_CLIENT_ID }}
+          WEBADE_OAUTH2_ENABLE_CHECK_TOKEN: ${{ vars.WEBADE_OAUTH2_ENABLE_CHECK_TOKEN }}
+          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
           WFDM_API_URL: ${{ vars.WFDM_REST_URL }}
           # WFDM_PROXY: ${{ vars.WFDM_PROXY }}
           WFIM_API_URL: ${{ vars.WFIM_CLIENT_URL }}
-          # WFNEWS_API_KEY: ${{ secrets.WFNEWS_API_KEY }}
-          # WFNEWS_API_URL: ${{ vars.WFNEWS_API_URL }}
-          # WILDFIRE_INFORMATION_LINE: ${{ vars.WILDFIRE_INFORMATION_LINE }}
+          WFNEWS_API_KEY: ${{ env.API_KEY }}
+          WFNEWS_API_URL: ${{ vars.WFNEWS_API_URL }}
+          WILDFIRE_INFORMATION_LINE: ${{ vars.WILDFIRE_INFORMATION_LINE }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -114,8 +120,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: "17"
+          distribution: "adopt"
 
       - name: Install Ionic
         run: npm install -g @ionic/cli
@@ -137,7 +143,7 @@ jobs:
         name: Build APK
         with:
           increment-build-number: false
-          project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
+          project-path: "${{ env.ANGULAR_DIRECTORY }}/android/"
           output-path: wfnews-release-${{ steps.vars.outputs.short_sha }}.apk
 
       - uses: sparkfabrik/android-build-action@v1.4.0
@@ -155,16 +161,16 @@ jobs:
           keystore-alias: ${{ secrets.KEY_ALIAS }}
           json-key-data: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
           upload-to-play-store: true
-          project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
+          project-path: "${{ env.ANGULAR_DIRECTORY }}/android/"
           output-path: wfnews-release-${{ steps.vars.outputs.short_sha }}.aab
 
       - uses: actions/upload-artifact@v3
-        env: 
+        env:
           FILE_EXTENSION: ${{ inputs.upload_to_play_store == 'false' && 'apk' || 'aab' }}
         name: Upload Build Artifact to GitHub
         with:
           name: wfnews-release-${{ steps.vars.outputs.short_sha }}.${{ env.FILE_EXTENSION }}
-          path: '${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ steps.vars.outputs.short_sha }}.${{ env.FILE_EXTENSION }}'
+          path: "${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ steps.vars.outputs.short_sha }}.${{ env.FILE_EXTENSION }}"
           retention-days: 3
 
       - name: Post to a Slack channel
@@ -178,6 +184,5 @@ jobs:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
-          channel-id: 'wildfire-build-notifier'
+          channel-id: "wildfire-build-notifier"
           slack-message: ":android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}  \n Environment: ${{ inputs.build_environment }} \n Upload to Play Store: ${{ inputs.upload_to_play_store }}"
-          
