--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -5,25 +5,25 @@ on:
   workflow_call:
     inputs:
       build_environment:
-        description: 'Build Environment'
+        description: "Build Environment"
         type: string
         required: true
       upload_to_app_store:
-        description: 'Upload to App Store'
+        description: "Upload to App Store"
         type: boolean
         required: true
   workflow_dispatch:
     inputs:
       build_environment:
-        description: 'Build Environment'
+        description: "Build Environment"
         type: choice
         options:
-          - development
-          - integration
-          - production
-        default: 'development'
+          - DEV
+          - TEST
+          - PROD
+        default: "development"
       upload_to_app_store:
-        description: 'Upload to App Store'
+        description: "Upload to App Store"
         type: boolean
         default: false
 
@@ -32,7 +32,13 @@ jobs:
   build:
     env:
       ANGULAR_DIRECTORY: ./client/wfnews-war/src/main/angular
+      APP_CONFIG_FILE: ./client/wfnews-war/src/main/angular/src/assets/data/appConfig.mobile.json
+
     runs-on: macos-latest
+
+    environment:
+      name: ${{ inputs.build_environment }}
+
     steps:
       - uses: actions/checkout@v3
 
@@ -47,8 +53,63 @@ jobs:
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
         env:
           NPMRC: ${{ secrets.NPMRC }}
-        run: |
-          echo -n "$NPMRC" > .npmrc
+        run: echo -n "$NPMRC" > .npmrc
+
+      - name: Get XML Info
+        id: version
+        uses: mavrosxristoforos/get-xml-info@1.1.1
+        with:
+          xml-file: "client/pom.xml"
+          xpath: "/*[local-name()='project']/*[local-name()='version']"
+
+      - name: Replace tokens
+        uses: cschleiden/replace-tokens@v1.2
+        with:
+          files: ${{ env.APP_CONFIG_FILE }}
+        env:
+          # From config.jsp
+          AGOL_ACTIVE_FIRES: ${{ vars.AGOL_ACTIVE_FIRES }}
+          AGOL_AREA_RESTRICTIONS: ${{ vars.AGOL_AREA_RESTRICTIONS }}
+          AGOL_BANS_AND_PROHIBITIONS: ${{ vars.AGOL_BANS_AND_PROHIBITIONS }}
+          AGOL_EVAC_ORDERS: ${{ vars.AGOL_EVAC_ORDERS }}
+          AGOL_FIRE_CENTRES: ${{ vars.AGOL_FIRE_CENTRES }}
+          AGOL_PERIMETRES: ${{ vars.AGOL_PERIMETRES }}
+          AGOL_URL: ${{ vars.AGOL_URL }}
+          APP_STORE_URL: ${{ vars.APP_STORE_URL }}
+          APPLICATION_ACRONYM: ${{ vars.APPLICATION_ACRONYM }}
+          APPLICATION_ENVIRONMENT: ${{ vars.DEFAULT_APPLICATION_ENVIRONMENT }}
+          BASE_URL: ${{ vars.BASE_URL }}
+          BC_WILDFIRE_SUPPORT_PAGE: ${{ vars.BC_WILDFIRE_SUPPORT_PAGE }}
+          BUILD_NUMBER: ${{ github.run_number }}
+          BURN_REGISTRATION_LINE: ${{ vars.BURN_REGISTRATION_LINE }}
+          # CONFIG_IM_URL: ${{ vars.CONFIG_IM_URL }}
+          DRIVEBC_BASE_URL: ${{ vars.DRIVEBC_BASE_URL }}
+          FACEBOOK_URL: ${{ vars.FACEBOOK_URL }}
+          GOOGLE_PLAY_URL: ${{ vars.GOOGLE_PLAY_URL }}
+          LAZY_AUTHENTICATE: ${{ vars.LAZY_AUTHENTICATE }}
+          # MAP_ICONS_ICON_ANCHOR: ${{ vars.MAP_ICONS_ICON_ANCHOR }}
+          # MAP_ICONS_ICON_SIZE: ${{ vars.MAP_ICONS_ICON_SIZE }}
+          # MAP_ICONS_SHADOW_SIZE: ${{ vars.MAP_ICONS_SHADOW_SIZE }}
+          # MAP_ICONS_TOOLTIP_OFFSET: ${{ vars.MAP_ICONS_TOOLTIP_OFFSET }}
+          MORE_INFORMATION_LINK: ${{ vars.MORE_INFORMATION_LINK }}
+          OPENMAPS_BASE_URL: ${{ vars.OPENMAPS_BASE_URL }}
+          POINT_ID_URL: ${{ vars.POINT_ID_URL }}
+          PROJECT_VERSION: ${{ steps.version.outputs.info }}
+          REPORT_A_WILDFIRE_PHONE_LINE: ${{ vars.REPORT_A_WILDFIRE_PHONE_LINE }}
+          SITEMINDER_URL_PREFIX: ${{ vars.SITEMINDER_URL_PREFIX }}
+          TWITTER_URL: ${{ vars.TWITTER_URL }}
+          WEBADE_OAUTH2_AUTH_SCOPES: ${{ vars.WEBADE_OAUTH2_AUTH_SCOPES }}
+          WEBADE_OAUTH2_AUTHORIZE_URL: ${{ vars.WEBADE_OAUTH2_AUTHORIZE_URL }}
+          WEBADE_OAUTH2_CHECK_TOKEN_V2_URL: ${{ vars.WEBADE_OAUTH2_CHECK_TOKEN_URL }}
+          WEBADE_OAUTH2_CLIENT_ID: ${{ vars.WEBADE_OAUTH2_UI_CLIENT_ID }}
+          WEBADE_OAUTH2_ENABLE_CHECK_TOKEN: ${{ vars.WEBADE_OAUTH2_ENABLE_CHECK_TOKEN }}
+          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
+          WFDM_API_URL: ${{ vars.WFDM_REST_URL }}
+          # WFDM_PROXY: ${{ vars.WFDM_PROXY }}
+          WFIM_API_URL: ${{ vars.WFIM_CLIENT_URL }}
+          WFNEWS_API_KEY: ${{ env.API_KEY }}
+          WFNEWS_API_URL: ${{ vars.WFNEWS_API_URL }}
+          WILDFIRE_INFORMATION_LINE: ${{ vars.WILDFIRE_INFORMATION_LINE }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -157,6 +218,5 @@ jobs:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
-          channel-id: 'wildfire-build-notifier'
+          channel-id: "wildfire-build-notifier"
           slack-message: ":apple_mac: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }} \n Environment: ${{ inputs.build_environment }} \n Upload to App Store: ${{ inputs.upload_to_app_store }}"
-        
