WFNEWS-1255: Initial component and structure for RoF Processing

--- a/client/wfnews-war/src/main/angular/src/tsconfig.spec.json
+++ b/client/wfnews-war/src/main/angular/src/tsconfig.spec.json
@@ -1,6 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "../out-tsc/spec",
     "baseUrl": "./",
     "types": [
