--- a/client/wfnews-war/src/main/angular/src/tsconfig.app.json
+++ b/client/wfnews-war/src/main/angular/src/tsconfig.app.json
@@ -1,6 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "types": ["jest"]
