--- a/client/wfnews-war/src/main/angular/tsconfig.json
+++ b/client/wfnews-war/src/main/angular/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compileOnSave": false,
-  "compilerOptions": {  
+  "compilerOptions": {
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "node_modules/@types"
     ],
