--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -23,6 +23,7 @@
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": false,
+      "updateAttribute": "consentToCall",
       "skipIndex": 2
     },
     {
@@ -30,7 +31,8 @@
       "title": "Are you available for a call back in the next 20 minutes?",
       "message": "If you’re not comfortable sharing your contact information, tap skip.",
       "allowSkip": true,
-      "allowExit": true
+      "allowExit": true,
+      "updateAttribute": ["fullName", "phoneNumber"]
     },
     {
       "type": "RoFLocationPage",
@@ -55,7 +57,7 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
-      "updateAttribute": "",
+      "updateAttribute": "smokeColor",
       "buttons": [
         {
           "label": "White",
@@ -97,6 +99,7 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "allowMultiSelect": false,
+      "updateAttribute": "fireSize",
       "buttons": [
         {
           "label": "The size of a Campfire",
@@ -142,6 +145,7 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
+      "updateAttribute": "signsOfResponse",
       "buttons": [
         {
           "label": "Truck(s)",
@@ -182,6 +186,7 @@
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": false,
+      "updateAttribute": "visibleFlame",
       "previousIndex": 2
     },
     {
@@ -190,7 +195,8 @@
       "message": "",
       "allowSkip": true,
       "allowExit": true,
-      "allowIDontKnowButton": true
+      "allowIDontKnowButton": true,
+      "updateAttribute": "rateOfSpread"
     },
     {
       "type": "RoFComplexQuestionPage",
@@ -200,6 +206,7 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
+      "updateAttribute": "burning",
       "buttons": [
         {
           "label": "Trees",
@@ -250,6 +257,7 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
+      "updateAttribute": "assetsAtRisk",
       "buttons": [
         {
           "label": "Home(s)",
@@ -289,6 +297,7 @@
       "message": "",
       "allowSkip": true,
       "allowExit": true,
+      "updateAttribute": "otherInfo",
       "previousIndex": 2
     },
     {
