--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -7,6 +7,7 @@
       "allowSkip": false,
       "allowExit": true,
       "closeButton": false,
+      "showProgress": false,
       "imageUrl": "../../../assets/images/rofbanner.svg"
     },
     {
@@ -14,7 +15,8 @@
       "title": "Permissions",
       "message": "To report a wildfire in British Columbia, you can call the Wildfire Dispatch team or submit a report through the app. This process usually takes 5-10 minutes.",
       "allowSkip": false,
-      "allowExit": true
+      "allowExit": true,
+      "showProgress": false
     },
     {
       "type": "RoFSimpleQuestionPage",
@@ -24,7 +26,8 @@
       "allowExit": true,
       "allowIDontKnowButton": false,
       "updateAttribute": "consentToCall",
-      "skipIndex": 2
+      "skipIndex": 2,
+      "showProgress": true
     },
     {
       "type": "RoFContactPage",
@@ -32,7 +35,8 @@
       "message": "If you’re not comfortable sharing your contact information, tap skip.",
       "allowSkip": true,
       "allowExit": true,
-      "updateAttribute": ["fullName", "phoneNumber"]
+      "updateAttribute": ["fullName", "phoneNumber"],
+      "showProgress": true
     },
     {
       "type": "RoFLocationPage",
@@ -40,14 +44,16 @@
       "message": "Center the yellow crosshairs on the location of the fire by moving the map with your finger. If you can’t locate the fire, tap skip.",
       "allowSkip": true,
       "allowExit": true,
-      "previousIndex": 2
+      "previousIndex": 2,
+      "showProgress": true
     },
     {
       "type": "RoFPhotoPage",
       "title": "Add Photos",
       "message": "Photos help us identify the type of fire and find it faster. If you are no longer near the fire or can’t take a photo, tap skip.",
       "allowSkip": true,
-      "allowExit": true
+      "allowExit": true,
+      "showProgress": true
     },
     {
       "type": "RoFComplexQuestionPage",
@@ -58,6 +64,7 @@
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
       "updateAttribute": "smokeColor",
+      "showProgress": true,
       "buttons": [
         {
           "label": "White",
@@ -100,6 +107,7 @@
       "allowIDontKnowButton": true,
       "allowMultiSelect": false,
       "updateAttribute": "fireSize",
+      "showProgress": true,
       "buttons": [
         {
           "label": "The size of a Campfire",
@@ -135,7 +143,8 @@
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
-      "skipIndex": 2
+      "skipIndex": 2,
+      "showProgress": true
     },
     {
       "type": "RoFComplexQuestionPage",
@@ -146,6 +155,7 @@
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
       "updateAttribute": "signsOfResponse",
+      "showProgress": true,
       "buttons": [
         {
           "label": "Truck(s)",
@@ -187,7 +197,8 @@
       "allowExit": true,
       "allowIDontKnowButton": false,
       "updateAttribute": "visibleFlame",
-      "previousIndex": 2
+      "previousIndex": 2,
+      "showProgress": true
     },
     {
       "type": "RoFSimpleQuestionPage",
@@ -196,7 +207,8 @@
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
-      "updateAttribute": "rateOfSpread"
+      "updateAttribute": "rateOfSpread",
+      "showProgress": true
     },
     {
       "type": "RoFComplexQuestionPage",
@@ -207,6 +219,7 @@
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
       "updateAttribute": "burning",
+      "showProgress": true,
       "buttons": [
         {
           "label": "Trees",
@@ -247,7 +260,8 @@
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
-      "skipIndex": 2
+      "skipIndex": 2,
+      "showProgress": true
     },
     {
       "type": "RoFComplexQuestionPage",
@@ -258,6 +272,7 @@
       "allowIDontKnowButton": true,
       "allowMultiSelect": true,
       "updateAttribute": "assetsAtRisk",
+      "showProgress": true,
       "buttons": [
         {
           "label": "Home(s)",
@@ -298,6 +313,7 @@
       "allowSkip": true,
       "allowExit": true,
       "updateAttribute": "otherInfo",
+      "showProgress": true,
       "previousIndex": 2
     },
     {
@@ -305,7 +321,8 @@
       "title": "",
       "message": "",
       "allowSkip": false,
-      "allowExit": true
+      "allowExit": true,
+      "showProgress": false
     },
     {
       "type": "RoFTitlePage",
@@ -314,7 +331,8 @@
       "allowSkip": false,
       "allowExit": false,
       "imageUrl": "../../../assets/images/rofthankyou.svg",
-      "closeButton": true
+      "closeButton": true,
+      "showProgress": false
     }
   ]
 }
