--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -205,6 +205,111 @@ on:
         required: false
         type: string
         default: "wfnews-lambdas"
+      #POINTID API VARIABLES
+      DATABASE_WEATHER_URL:
+        required: false
+        type: string
+        default: ""
+      DATABASE_WEATHER_USER:
+        required: false
+        type: string
+        default: ""
+      BCGW_URL:
+        required: false
+        type: string
+        default: ""
+      WFGS_URL:
+        required: false
+        type: string
+        default: ""
+      MAX_ALLOWED_RADIUS:
+        required: false
+        type: number
+        default: 1000
+      ASYNC_JOB_INTERVAL:
+        required: false
+        type: number
+        default: 900000
+      ASYNC_JOB_REF_LAT:
+        required: false
+        type: number
+        default: 55.2758
+      ASYNC_JOB_REF_LONG: 
+        required: false
+        type: number
+        default: -124.8509
+      ASYNC_JOB_REF_RADIUS:
+        required: false
+        type: number
+        default: 999
+      WEATHER_HOST:
+        required: false
+        type: string
+        default: ""
+      WEATHER_USER:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_URL:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_AREA_RESTRICTIONS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_BANS_PROHIBITION_AREAS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_DANGER_RATING:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_ACTIVE_FIRES:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES:
+        required: false
+        type: string
+        default: ""
+      WFARCGIS_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
+      WEBADE_OAUTH2_CLIENT_ID:
+        required: false
+        type: string
+        default: ""
+      WEBADE_OATH2_TOKEN_URL:
+        required: false
+        type: string
+        default: ""
+      WEBADE_OAUTH2_CLIENT_SCOPES:
+        required: false
+        type: string
+        default: ""
+      FIREWEATHER_BASEURL:
+        required: false
+        type: string
+        default: ""
+      FIREWEATHER_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
+      WFNEWS_BASEURL:
+        required: false
+        type: string
+        default: ""
+      WFNEWS_QUEUESIZE:
+        required: false
+        type: number
+        default: 1500
 
     secrets:
       # AWS_ACCESS_KEY_ID:
@@ -228,6 +333,12 @@ on:
       SNS_EMAIL_TARGETS:
         required: true
       CLOUDFRONT_HEADER:
+        required: true
+      DATABASE_WEATHER_PWD:
+        required: true
+      WEATHER_PASSWORD:
+        required: true
+      WEBADE_OAUTH2_CLIENT_SECRET:
         required: true
 
 env:
@@ -329,6 +440,37 @@ jobs:
           EVACUATION_MONITOR_KEY: ${{inputs.EVACUATION_MONITOR_KEY }}
           LAMBDA_LAYER_KEY: ${{inputs.LAMBDA_LAYER_KEY }}
           FUNCTION_BUCKET: ${{inputs.FUNCTION_BUCKET}}
+
+          # POINTID API VARIABLES
+          DATABASE_WEATHER_URL: ${{ inputs.DATABASE_WEATHER_URL }}
+          DATABASE_WEATHER_USER: ${{inputs.DATABASE_WEATHER_USER }}
+          BCGW_URL: ${{inputs.BCGW_URL }}
+          WFGS_URL: ${{inputs.WFGS_URL }}
+          MAX_ALLOWED_RADIUS: ${{inputs.MAX_ALLOWED_RADIUS }}
+          ASYNC_JOB_INTERVAL: ${{inputs.ASYNC_JOB_INTERVAL }}
+          ASYNC_JOB_REF_LAT: ${{inputs.ASYNC_JOB_REF_LAT }}
+          ASYNC_JOB_REF_LONG: ${{inputs.ASYNC_JOB_REF_LONG }}
+          ASYNC_JOB_REF_RADIUS: ${{inputs.ASYNC_JOB_REF_RADIUS }}
+          WEATHER_HOST: ${{inputs.WEATHER_HOST }}
+          WEATHER_USER: ${{inputs.WEATHER_USER }}
+          WFARCGIS_URL: ${{inputs.WFARCGIS_URL }}
+          WFARCGIS_LAYER_AREA_RESTRICTIONS: ${{inputs.WFARCGIS_LAYER_AREA_RESTRICTIONS }}
+          WFARCGIS_LAYER_BANS_PROHIBITION_AREAS: ${{inputs.WFARCGIS_LAYER_BANS_PROHIBITION_AREAS }}
+          WFARCGIS_LAYER_DANGER_RATING: ${{inputs.WFARCGIS_LAYER_DANGER_RATING }}
+          WFARCGIS_LAYER_ACTIVE_FIRES: ${{inputs.WFARCGIS_LAYER_ACTIVE_FIRES }}
+          WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS: ${{inputs.WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS }}
+          WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES: ${{inputs.WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES }}
+          WFARCGIS_QUEUESIZE: ${{inputs.WFARCGIS_QUEUESIZE }}
+          WEBADE_OAUTH2_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_CLIENT_ID }}
+          WEBADE_OATH2_TOKEN_URL: ${{inputs.WEBADE_OATH2_TOKEN_URL }}
+          WEBADE_OAUTH2_CLIENT_SCOPES: ${{inputs.WEBADE_OAUTH2_CLIENT_SCOPES }}
+          FIREWEATHER_BASEURL: ${{inputs.FIREWEATHER_BASEURL }}
+          FIREWEATHER_QUEUESIZE: ${{inputs.FIREWEATHER_QUEUESIZE }}
+          WFNEWS_BASEURL: ${{inputs.WFNEWS_BASEURL }}
+          WFNEWS_QUEUESIZE: ${{inputs.WFNEWS_QUEUESIZE }}
+          DATABASE_WEATHER_PWD: ${{secrets.DATABASE_WEATHER_PWD }}
+          WEATHER_PASSWORD: ${{secrets.WEATHER_PASSWORD }}
+          WEBADE_OAUTH2_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_CLIENT_SECRET }}
 
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
