--- a/client/wfnews-war/src/main/angular/android/build.gradle
+++ b/client/wfnews-war/src/main/angular/android/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+plugins {
+  id 'com.google.gms.google-services' version '4.3.15' apply false
+}
+
 buildscript {
     
     repositories {
