--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -1,17 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build Server
 
 env:
-  IMAGE_NAME: ${{ github.repository }}-server
+  IMAGE_NAME: "${{ github.repository }}-${{inputs.PROJECT_NAME}}"
 
-# Controls when the workflow will run
-on:
+on: 
   workflow_call:
     inputs:
       ENVIRONMENT:
         required: true
         type: string
+      PROJECT_NAME:
+        type: string
+        description: 'Name of project, as given to the subfolder of /server to build'
+        required: true
       IS_HOTFIX:
         required: false
         type: boolean
@@ -27,11 +28,7 @@ on:
         required: true
       IDIR_PASSWORD:
         required: true
-      
 
-
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -54,23 +51,23 @@ jobs:
           distribution: 'adopt'
       
       - name: Build with Maven
-        run: mvn --settings server/wfnews-api/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/wfnews-api/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
+        run: mvn --settings server/${{ inputs.PROJECT_NAME }}/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/${{ inputs.PROJECT_NAME }}/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
         
       - name: Copy files to neccessary folders
-        run: mkdir staging && cp server/wfnews-api/wfnews-api-rest-endpoints/target/*.war staging
+        run: mkdir staging && cp server/${{ inputs.PROJECT_NAME }}/${{ inputs.PROJECT_NAME }}-rest-endpoints/target/*.war staging
       
       - uses: actions/upload-artifact@v3
         with:
-          name: Package
+          name: ${{ inputs.PROJECT_NAME }}-package
           path: staging
 
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
           path: staging
-          key: ${{ runner.os }}-maven-${{ hashFiles('**war.xml') }}
+          key: ${{ inputs.PROJECT_NAME }}-maven-${{ hashFiles('**war.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ inputs.PROJECT_NAME }}-maven-
 
   docker:
     needs: build
@@ -88,14 +85,8 @@ jobs:
       - name: download artifact
         uses: actions/download-artifact@v3
         with:
-          name: Package
+          name: ${{ inputs.PROJECT_NAME }}-package
           path: .
-      
-      - name: Get Pull Request Number
-        id: pr
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Update image name if PR number present
         if: ${{ github.event.pull_request.number > 0 || inputs.IS_HOTFIX == true }}
@@ -134,4 +125,3 @@ jobs:
           push: true
           tags: ${{ steps.meta_pr.outputs.tags }}
           labels: ${{ steps.meta_pr.outputs.labels }}
-
