Fix ECS for notifications-api and change configs

--- a/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfone-notifications-api/wfone-notifications-api-rest-endpoints/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-webade-oauth2.check.token.url=#{webade-oauth2.check.token.url}
-webade-oauth2.token.client.url=#{webade-oauth2.token.client.url}
-webade-oauth2.token.url=#{webade-oauth2.token.url}
-webade-oauth2.wfone_notifictions_api_rest.client.secret=#{webade-oauth2.wfone_notifictions_api_rest.client.secret}
-wfdm-rest.url=#{wfdm-rest.url}
-wfim-client.url=#{wfim-client.url}
-wfim-code-tables.url=#{wfim-code-tables.url}
-wfone.datasource.max.connections=#{wfone.datasource.max.connections}
-wfone.datasource.url=#{wfone.datasource.url}
-wfone.datasource.username=#{wfone.datasource.username}
-wfone.default.application.environment=#{wfone.default.application.environment}
-wfone.email.admin.address=#{wfone.email.admin.address}
-wfone.email.from.address=#{wfone.email.from.address}
-wfone.email.notifications.enabled.ind=#{wfone.email.notifications.enabled.ind}
-wfone.email.sync.error.subject=#{wfone.email.sync.error.subject}
-wfone.email.sync.send.error.frequency=#{wfone.email.sync.send.error.frequency}
-wfone.email.sync.send.frequency=#{wfone.email.sync.send.frequency}
-wfone.email.sync.subject=#{wfone.email.sync.subject}
-wfone.smtp.credentials.password=#{wfone.smtp.credentials.password}
-wfone.smtp.credentials.user=#{wfone.smtp.credentials.user}
-wfone.smtp.host.name=#{wfone.smtp.host.name}
+webade-oauth2.check.token.url=#{WEBADE_OAUTH2_CHECK_TOKEN_URL}
+webade-oauth2.token.client.url=#{WEBADE_OAUTH2_TOKEN_CLIENT_URL}
+webade-oauth2.token.url=#{WEBADE_OAUTH2_TOKEN_URL}
+webade-oauth2.wfone_notifictions_api_rest.client.secret=#{WEBADE_OAUTH2_REST_CLIENT_SECRET}
+wfdm-rest.url=#{WFDM_REST_URL}
+wfim-client.url=#{WFIM_CLIENT_URL}
+wfim-code-tables.url=#{WFIM_CODE_TABLES_URL}
+wfone.datasource.max.connections=#{DATASOURCE_MAX_CONNECTIONS}
+wfone.datasource.url=#{DATASOURCE_URL}
+wfone.datasource.username=#{DATASOURCE_USER}
+wfone.default.application.environment=#{DEFAULT_APPLICATION_ENVIRONMENT}
+wfone.email.admin.address=#{EMAIL_ADMIN_EMAIL}
+wfone.email.from.address=#{EMAIL_FROM_EMAIL}
+wfone.email.notifications.enabled.ind=#{EMAIL_NOTIFICATIONS_ENABLED}
+wfone.email.sync.error.subject=#{EMAIL_SYNC_SEND_ERROR_SUBJECT}
+wfone.email.sync.send.error.frequency=#{EMAIL_SYNC_SEND_ERROR_FREQ}
+wfone.email.sync.send.frequency=#{EMAIL_SYNC_SEND_FREQ}
+wfone.email.sync.subject=#{EMAIL_SYNC_SUBJECT}
+wfone.smtp.credentials.password=#{SMTP_CREDENTIALS_PASSWORD}
+wfone.smtp.credentials.user=#{SMTP_CREDENTIALS_USER}
+wfone.smtp.host.name=#{SMTP_HOST_NAME}
