WFNEWS-1076 : Add wfone-notifications-api to terraform (#857)
* Android dev build

* Add names and production steps

* iOS script and cleanup

* Update scripts

* update scripts

* Add branch temporarily for testing

* Add caching back to android

* Fix package-lock location

* fix paths

* add npmrc

* fix path of npmrc

* fix secret name

* Remove package-lock and cache

* Missed a line

* comment slack message

* quotes around echo

* Fix echo on mac

* debug npmrc

* remove param from echo

* Tweak echo command

* Put npmrc in home on macos

* mac npmrc debugging

* more debug

* more debugging

* clean up

* debug debug

* put npmrc into env

* Add iOS again with proper settings

* Android dev build

* Add names and production steps

* iOS script and cleanup

* Update scripts

* update scripts

* Add branch temporarily for testing

* Add caching back to android

* Fix package-lock location

* fix paths

* add npmrc

* fix path of npmrc

* fix secret name

* Remove package-lock and cache

* Missed a line

* comment slack message

* quotes around echo

* Fix echo on mac

* debug npmrc

* remove param from echo

* Tweak echo command

* Put npmrc in home on macos

* mac npmrc debugging

* more debug

* more debugging

* clean up

* debug debug

* put npmrc into env

* Add iOS again with proper settings

* Add google services file

* Uncomment Slack

* Add Android back with correct settings

* Fix working directory

* Use APK for build

* Fix message formatting

* Message formating

* Control flow using inputs

* Get the workflow running for the first time

* Add push to master so workflow runs once

* Add more detail to slack

* Add branch to push

* bump build numbers for android releases

* Remove the push trigger (can use CLI)

* Make a single config for mobile

* run deploy

* Add branch to run workflow

* Move config

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -116,7 +116,7 @@ jobs:
       WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES: ubm4tcTYICKBpist/ArcGIS/rest/services/British_Columbia_Fire_Centre_Boundaries/FeatureServer/0
       WFARCGIS_QUEUESIZE: 1500
       WEBADE_OAUTH2_CLIENT_ID: WFSS_POINTID_REST
-      WEBADE_OATH2_TOKEN_URL: https://apps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
+      WEBADE_OAUTH2_TOKEN_URL: https://apps.nrs.gov.bc.ca/pub/oauth2/v1/oauth/token?disableDeveloperFilter=true
       WEBADE_OAUTH2_CLIENT_SCOPES: WFSS.* WFWX.*
       FIREWEATHER_BASEURL: https://bcwsapi.nrs.gov.bc.ca/wfwx-fireweather-api/
       FIREWEATHER_QUEUESIZE: 1500
