--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,9 +20,8 @@ on:
     inputs:
       IS_HOTFIX:
         description: 'Is this a hotfix?'
-        type: boolean
         required: false
-        default: false
+        default: 'false'
 
 jobs:
   call-lambda-zip:
@@ -77,7 +76,7 @@ jobs:
     needs: [call-lambda-zip, call-mvn-client, wfnews-api-server-build, wfone-notifications-api-server-build, liquibase-build, apisix-build]
     with:
       DEFAULT_APPLICATION_ENVIRONMENT: DEV
-      IMAGE_TAG: ${{ inputs.IS_HOTFIX && format('hotfix-{0}', inputs.BRANCH) || format( 'pr-{0}', github.event.pull_request.number) }}
+      IMAGE_TAG: ${{ inputs.IS_HOTFIX == 'true' && format('hotfix-{0}', inputs.BRANCH) || format( 'pr-{0}', github.event.pull_request.number) }}
       IS_HOTFIX: ${{ inputs.IS_HOTFIX }}
       TARGET_ENV: dev
 
