--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.IS_HOTFIX == 'false' }}
+        if: ${{ github.event.inputs.IS_HOTFIX != 'true' }}
       
       - uses: actions/checkout@v3
         if: ${{ github.event.inputs.IS_HOTFIX == 'true' }}
@@ -70,7 +70,7 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.IS_HOTFIX == 'false' }}
+        if: ${{ github.event.inputs.IS_HOTFIX != 'true' }}
       
       - uses: actions/checkout@v3
         if: ${{ github.event.inputs.IS_HOTFIX == 'true' }}
