Update pages to navigate by ID

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     {
+      "id": "first-page",
       "type": "RoFTitlePage",
       "title": "Report a Fire",
       "message": "To report a wildfire in British Columbia, you can call the Wildfire Dispatch team or submit a report through the app. This process usually takes 5-10 minutes.",
@@ -8,17 +9,23 @@
       "allowExit": true,
       "closeButton": false,
       "showProgress": false,
-      "imageUrl": "../../../assets/images/rofbanner.svg"
+      "imageUrl": "../../../assets/images/rofbanner.svg",
+      "nextId": "permissions-page",
+      "isStartPage": true
     },
     {
+      "id": "permissions-page",
       "type": "RoFPermissionsPage",
       "title": "Permissions",
       "message": "Personal information is collected by the BC Wildfire Service under section 26 (c) of the Freedom of Information and Protection of Privacy Act for the purpose of managing wildfire incidents. Should you have questions about the collection or use of this information please contact BCWS.PublicMobileApp@gov.bc.ca",
       "allowSkip": false,
       "allowExit": true,
-      "showProgress": false
+      "showProgress": false,
+      "previousId": "first-page",
+      "nextId": "callback-page"
     },
     {
+      "id": "callback-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Are you available for a call back in the next 20 minutes?",
       "message": "If you’re not comfortable sharing your contact information, tap skip.",
@@ -26,36 +33,47 @@
       "allowExit": true,
       "allowIDontKnowButton": false,
       "updateAttribute": "consentToCall",
-      "skipIndex": 2,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "permissions-page",
+      "nextId": "contact-page",
+      "skipId": "location-page"
     },
     {
+      "id": "contact-page",
       "type": "RoFContactPage",
       "title": "Are you available for a call back in the next 20 minutes?",
       "message": "If you’re not comfortable sharing your contact information, tap skip.",
       "allowSkip": true,
       "allowExit": true,
       "updateAttribute": ["fullName", "phoneNumber"],
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "callback-page",
+      "nextId": "location-page"
     },
     {
+      "id": "location-page",
       "type": "RoFLocationPage",
       "title": "Where is the Wildfire?",
       "message": "Center the yellow crosshairs on the location of the fire by moving the map with your finger. If you can’t locate the fire, tap skip.",
       "allowSkip": true,
       "allowExit": true,
-      "previousIndex": 2,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "callback-page",
+      "nextId": "photo-page"
     },
     {
+      "id": "photo-page",
       "type": "RoFPhotoPage",
       "title": "Add Photos",
       "message": "Photos help us identify the type of fire and find it faster. If you are no longer near the fire or can’t take a photo, tap skip.",
       "allowSkip": true,
       "allowExit": true,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "location-page",
+      "nextId": "smoke-color-page"
     },
     {
+      "id": "smoke-color-page",
       "type": "RoFComplexQuestionPage",
       "title": "What colour is the smoke?",
       "message": "Select all that apply",
@@ -65,6 +83,8 @@
       "allowMultiSelect": true,
       "updateAttribute": "smokeColor",
       "showProgress": true,
+      "previousId": "photo-page",
+      "nextId": "fire-size-page",
       "buttons": [
         {
           "label": "White",
@@ -99,6 +119,7 @@
       ]
     },
     {
+      "id": "fire-size-page",
       "type": "RoFComplexQuestionPage",
       "title": "How big is the fire?",
       "message": "",
@@ -108,6 +129,8 @@
       "allowMultiSelect": false,
       "updateAttribute": "fireSize",
       "showProgress": true,
+      "previousId": "smoke-color-page",
+      "nextId": "response-page",
       "buttons": [
         {
           "label": "The size of a Campfire",
@@ -132,16 +155,20 @@
       ]
     },
     {
+      "id": "response-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Are there any signs of response?",
       "message": "Do you hear sirens or helicopters? Do you see trucks or personnel near the fire?",
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
-      "skipIndex": 2,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "fire-size-page",
+      "nextId": "response-details-page",
+      "skipId": "visible-flame-page"
     },
     {
+      "id": "response-details-page",
       "type": "RoFComplexQuestionPage",
       "title": "Are there any signs of response?",
       "message": "Select all that apply",
@@ -151,6 +178,8 @@
       "allowMultiSelect": true,
       "updateAttribute": "signsOfResponse",
       "showProgress": true,
+      "previousId": "response-page",
+      "nextId": "visible-flame-page",
       "buttons": [
         {
           "label": "Truck(s)",
@@ -185,6 +214,7 @@
       ]
     },
     {
+      "id": "visible-flame-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Is there a visible flame?",
       "message": "",
@@ -192,10 +222,12 @@
       "allowExit": true,
       "allowIDontKnowButton": false,
       "updateAttribute": "visibleFlame",
-      "previousIndex": 2,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "response-page",
+      "nextId": "fire-spread-page"
     },
     {
+      "id": "fire-spread-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Is the fire spreading?",
       "message": "",
@@ -203,9 +235,12 @@
       "allowExit": true,
       "allowIDontKnowButton": true,
       "updateAttribute": "rateOfSpread",
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "visible-flame-page",
+      "nextId": "what-is-burning-page"
     },
     {
+      "id": "what-is-burning-page",
       "type": "RoFComplexQuestionPage",
       "title": "What is burning?",
       "message": "Select all that apply",
@@ -215,6 +250,8 @@
       "allowMultiSelect": true,
       "updateAttribute": "burning",
       "showProgress": true,
+      "previousId": "fire-spread-page",
+      "nextId": "infrastructure-page",
       "buttons": [
         {
           "label": "Trees",
@@ -249,16 +286,20 @@
       ]
     },
     {
+      "id": "infrastructure-page",
       "type": "RoFSimpleQuestionPage",
       "title": "Is there any infrastructure at risk?",
       "message": "",
       "allowSkip": true,
       "allowExit": true,
       "allowIDontKnowButton": true,
-      "skipIndex": 2,
-      "showProgress": true
+      "showProgress": true,
+      "previousId": "what-is-burning-page",
+      "nextId": "infrastructure-details-page",
+      "skipId": "comments-page"
     },
     {
+      "id": "infrastructure-details-page",
       "type": "RoFComplexQuestionPage",
       "title": "Is there any infrastructure at risk?",
       "message": "Select all that apply",
@@ -268,6 +309,8 @@
       "allowMultiSelect": true,
       "updateAttribute": "assetsAtRisk",
       "showProgress": true,
+      "previousId": "infrastructure-page",
+      "nextId": "comments-page",
       "buttons": [
         {
           "label": "Home(s)",
@@ -302,6 +345,7 @@
       ]
     },
     {
+      "id": "comments-page",
       "type": "RoFCommentsPage",
       "title": "Is there anything else you'd like us to know?",
       "message": "",
@@ -309,17 +353,22 @@
       "allowExit": true,
       "updateAttribute": "otherInfo",
       "showProgress": true,
-      "previousIndex": 2
+      "previousId": "infrastructure-page",
+      "nextId": "review-page"
     },
     {
+      "id": "review-page",
       "type": "RoFReviewPage",
       "title": "",
       "message": "",
       "allowSkip": false,
       "allowExit": true,
-      "showProgress": false
+      "showProgress": false,
+      "previousId": "comments-page",
+      "nextId": "final-page"
     },
     {
+      "id": "final-page",
       "type": "RoFTitlePage",
       "title": "Thank You!",
       "message": "Your report has been successfully submitted to the Provincial Wildfire Reporting Centre. We may call you back within 20 minutes if we have any further questions.\nReports like these help us protect the forests, grasslands and communities of British Columbia, so thank you for taking the time. ",
